--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -1,94 +1,104 @@
 <%= form_for @cliente, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :cartao, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :cartao, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :nome, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :nome, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :data_nasc, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :data_nasc, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :obs, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :obs, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :rua, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :rua, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :acumulado, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :acumulado, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :activo, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.check_box :activo, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :profissao_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.collection_select(:profissao_id, Profissao.all, :id, :descricao) %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :grupocliente_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.collection_select(:grupocliente_id, Grupocliente.all, :id, :descricao) %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :localidade_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.collection_select(:localidade_id, Localidade.all, :id, :localidade) %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :loja_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.collection_select(:loja_id, Loja.all, :id, :descricao) %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :vendedor_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.collection_select(:vendedor_id, Vendedor.all, :id, :descricao) %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :sexo_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.collection_select(:sexo_id, Sexo.all, :id, :descricao) %>
-    </div>
-  </div>
+	<div class="row-fluid">
+		<div class="span6">
+			<div class="control-group">
+			    <%= f.label :cartao, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.text_field :cartao, :class => 'text_field' %>
+			    </div>
+			  </div>
+			
+			  <div class="control-group">
+			    <%= f.label :nome, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.text_field :nome, :class => 'text_field' %>
+			    </div>
+			  </div>
+			  <div class="control-group">
+			    <%= f.label :data_nasc, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.text_field :data_nasc, :class => 'text_field', :id =>"datepicker" %>
+			    </div>
+			  </div>
+			
+			  <div class="control-group">
+			    <%= f.label :rua, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.text_field :rua, :class => 'text_field' %>
+			    </div>
+			  </div>
+			  <div class="control-group">
+			    <%= f.label :localidade_id, :class => 'control-label input-sm' %>
+			    <div class="controls">
+			      <%= f.collection_select(:localidade_id, Localidade.all, :id, :localidade, :class => 'form-control input-sm') %>
+			    </div>
+			  </div> 
+			  
+			  <div class="control-group">
+			    <%= f.label :sexo_id, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.collection_select(:sexo_id, Sexo.all, :id, :descricao) %>
+			    </div>
+			  </div>
+			  
+			
+			  <div class="control-group">
+			    <%= f.label :profissao_id, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.collection_select(:profissao_id, Profissao.all, :id, :descricao) %>
+			    </div>
+			  </div>
+		</div>
+		<div class="span6">
+			 <div class="control-group">
+			    <%= f.label :grupocliente_id, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.collection_select(:grupocliente_id, Grupocliente.all, :id, :descricao) %>
+			    </div>
+			  </div>
+			
+			  <div class="control-group">
+			    <%= f.label :loja_id, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.collection_select(:loja_id, Loja.all, :id, :descricao) %>
+			    </div>
+			  </div>
+			  <div class="control-group">
+			    <%= f.label :vendedor_id, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.collection_select(:vendedor_id, Vendedor.all, :id, :descricao) %>
+			    </div>
+			  </div>
+			  <div class="control-group">
+			    <%= f.label :obs, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.text_field :obs, :class => 'text_field' %>
+			    </div>
+			  </div>
+			  <div class="control-group">
+			    <%= f.label :activo, :class => 'control-label' %>
+			    <div class="controls">
+			      <%= f.check_box :activo, :class => 'text_field' %>
+			    </div>
+			  </div>
+			  
+			
+			<div class="control-group">
+			    <%= f.label "PERFIL CLIENTE", :class => 'control-label' %>
+			    <div class="controls">
+			      <% Perfil.find(:all).each do |c| %>
+			        <%= check_box_tag 'cliente[perfil_ids][]', c.id, @cliente.perfils.include?(c) %><%= c.descricao %><br />
+			      <% end %>
+			    </div>
+			  </div>
+		</div>
+	</div>
+
+
+ 
 
 
 
-
-<div class="control-group">
-    <%= f.label "PERFIL CLIENTE", :class => 'control-label' %>
-    <div class="controls">
-      <% Perfil.find(:all).each do |c| %>
-        <%= check_box_tag 'cliente[perfil_ids][]', c.id, @cliente.perfils.include?(c) %><%= c.descricao %><br />
-      <% end %>
-    </div>
-  </div>
   
 
 
