--- a/app/views/grupoclientes/index.html.erb
+++ b/app/views/grupoclientes/index.html.erb
@@ -1,38 +1,35 @@
 <%- model_class = Grupocliente -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:descricao) %></th>
-      <th><%= model_class.human_attribute_name(:racio) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @grupoclientes.each do |grupocliente| %>
-      <tr>
-        <td><%= link_to grupocliente.id, grupocliente_path(grupocliente) %></td>
-        <td><%= grupocliente.descricao %></td>
-        <td><%= grupocliente.racio %></td>
-        <td><%=l grupocliente.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_grupocliente_path(grupocliente), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      grupocliente_path(grupocliente),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<h3><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h3>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_grupocliente_path,
-            :class => 'btn btn-primary' %>
+<div class="table-responsive">
+	<table id="tabela" class="table table-striped table-condensed" >
+	  <thead>
+	    <tr>
+	      <th></th>
+	      <th><%= model_class.human_attribute_name(:descricao) %></th>
+	      <th><%= model_class.human_attribute_name(:racio) %></th>
+	      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    <% @grupoclientes.each do |grupocliente| %>
+	      <tr>
+	        <td><%= link_to '<i class="icon-file"></i>'.html_safe, grupocliente_path(grupocliente) %></td>	      	
+	        <td><%= grupocliente.descricao %></td>
+	        <td><%= grupocliente.racio %></td>
+	        <td>
+	          <%= link_to '<i class="icon-pencil"></i>'.html_safe,
+	                      	edit_grupocliente_path(grupocliente), :class => 'btn btn-mini' %>
+
+	          <%= link_to '<i class="icon-remove"></i>'.html_safe,
+	                      grupocliente_path(grupocliente),
+	                      :method => :delete,
+	                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+	                      :class => 'btn btn-mini btn-danger' %>
+	        </td>
+	      </tr>
+	    <% end %>
+	  </tbody>
+	</table>
+</div>
+<%= link_to t('.new', :default => t("helpers.links.new")), new_grupocliente_path, :class => 'btn btn-primary' %>
